--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 .page-title {
 	background-image: url(header.jpg);
-	background-size: auto;
+	width: 100%;
 	background-repeat: no-repeat;
 	height: 900px;
 	
@@ -33,6 +33,7 @@
 
 body {
 	font-family: 'Hind', sans-serif;
+	overflow-x: hidden;
 }
 
 .brandon {
@@ -53,10 +54,11 @@ body {
 }
 
 .team-pic {
-padding: 20px;	
+margin: 5px;
+
 }
 
-<!--------- form- ----------------->
+<!--------- form------------------>
 
 #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
 	width:100%;
@@ -116,5 +118,12 @@ padding: 20px;
  color:#888;
 }
 
+.map_big {
+	width: 100%;
+	height: 330px;
+	border: 0;
+
+	
+}
 
 
