--- a/style.css
+++ b/style.css
@@ -1,129 +1,27 @@
-.navbar-brand {
-	position: relative;
-	left: 100px;
-	top:3px;
-}
-
-.navbar-custom {
-    background-color: white;
-	
-	text-align: center;
-	border: 1px solid white;
-	margin: 10px 0px;
-	top: -10px;
-
-}
-.page-title {
-	background-image: url(header.jpg);
-	width: 100%;
-	background-repeat: no-repeat;
-	height: 900px;
-	
-	background-position: center center;
-	position: relative;
-}
-
-
-.kontenerki {
-	
-	padding: 40px 25px 50px 25px;
-	text-align: center;
-	
-}
-
 body {
-	font-family: 'Hind', sans-serif;
-	overflow-x: hidden;
-}
-
-.brandon {
-	font-size: 36px;
-	color: black;
-}
-
-.svcs{
-	border: 1px dashed #D8D8D8;
-	padding: 15px;
-	border-radius: 25px;
-}
-
-
-.h1 {
-	padding-bottom: 30px;
-	
-}
-
-.team-pic {
-margin: 5px;
-
-}
-
-<!--------- form------------------>
-
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
-	width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-}
-
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border:1px solid #AAA;
-}
-
-#contact textarea {
-	height:100px;
-	max-width:100%;
-  resize:none;
-}
-
-#contact button[type="submit"] {
-	cursor:pointer;
-	width:100%;
-	border:none;
-	background:#030306B3;
-	color:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-	font-size:15px;
-}
-
-#contact button[type="submit"]:hover {
-	background: black;
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background-color 0.3s ease-in-out;
-}
-
-#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
-
-#contact input:focus, #contact textarea:focus {
-	outline:0;
-	border:1px solid #999;
-}
-::-webkit-input-placeholder {
- color:#888;
-}
-:-moz-placeholder {
- color:#888;
-}
-::-moz-placeholder {
- color:#888;
-}
-:-ms-input-placeholder {
- color:#888;
-}
-
-.map_big {
-	width: 100%;
-	height: 330px;
-	border: 0;
+	background-color: #F0F0F0;
+	color: 	#575757 ;
+	font-family: 'Muli', sans-serif;
 
 	
 }
 
+#outside {
+	margin: 40px 0px;
+	text-align: center;
+	letter-spacing: 5px;
+}
 
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #cccccc;
+  text-align: center;
+  color: white;
+}
+.footer a {
+	color: white;
+}
